fix twits vertical align and visited links

--- a/css/site.styl
+++ b/css/site.styl
@@ -177,6 +177,10 @@ img
   display: inline-block
   width: ( 12 * $col ) + ( ( 12 - 1 ) * $gutter )
   padding: 0 $margin-basic
+  vertical-align: middle
+
+  &:visited
+    color: $color-white-soft
 
 // MEDIA QUERIES
 
